compiler-skeleton/tests/compile-error/comp_array.ln
a[]:int;
b[]:bool;

a[0]={true,0,0};